--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "gpt4all",
-  "version": "1.0.0",
-  "description": "GPT4All Typescript package",
+  "name": "gpt4all-client",
+  "version": "0.0.1",
+  "private": false,
+  "description": "GPT4All Typescript Client",
+  "license": "MIT",
+  "author": "Conner Swann <conner@intuitivesystems.xyz>",
   "main": "dist/gpt4all.js",
   "types": "dist/gpt4all.d.ts",
-  "author": "Conner Swann <conner@intuitivesystems.xyz>",
-  "license": "MIT",
-  "private": false,
+  "scripts": {
+    "build": "tsup src",
+    "dev": "DEBUG=* tsx examples/simple.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "axios": "^1.3.4",
+    "cli-progress": "^3.12.0",
     "debug": "^4.3.4",
-    "os": "^0.1.2",
-    "progress": "^2.0.3"
+    "got": "^12.6.0",
+    "os": "^0.1.2"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.0",
     "@types/debug": "^4.1.7",
-    "@types/progress": "^2.0.5"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.6"
   }
 }
