--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "gpt4all-client",
+  "name": "@jellydn/gpt4all",
   "version": "0.0.1",
   "private": false,
   "description": "GPT4All Typescript Client",
+  "keywords": [
+    "gpt4all"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jellydn/gpt4all-ts"
+  },
   "license": "MIT",
   "author": "Conner Swann <conner@intuitivesystems.xyz>",
   "main": "dist/gpt4all.js",
   "types": "dist/gpt4all.d.ts",
   "scripts": {
-    "build": "tsup src",
+    "build": "tsup src --dts --clean",
     "dev": "DEBUG=* tsx examples/simple.ts",
     "pkg-check": "package-check",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +31,7 @@
     "@types/cli-progress": "^3.11.0",
     "@types/debug": "^4.1.7",
     "tsup": "^6.7.0",
-    "tsx": "^3.12.6"
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.4"
   }
 }
