--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   ],
   "scripts": {
     "build": "tsup src/gpt4all.ts --format esm --dts --clean",
-    "dev": "DEBUG=* tsx examples/simple.ts",
+    "dev": "npm-run-all -s dev:*",
+    "dev:simple": "DEBUG=* tsx examples/simple.ts",
+    "dev:advance": "DEBUG=* tsx examples/advance.ts",
     "pkg-check": "package-check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,11 +36,12 @@
     "@skypack/package-check": "^0.2.2",
     "@types/cli-progress": "^3.11.0",
     "@types/debug": "^4.1.7",
+    "npm-run-all": "^4.1.5",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   }
 }
